add a bottom Progress Bar

--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
             </path>
         </svg>
     </a>
+    <div class="progressBar"></div>
     <main id="butter">
         <section class="heroArea">
             <h1>Développeur Front-End</h1>
