--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <meta name=" robots " content="index, follow">
     <meta name="keywords" content="développeur, informatique, front-end, front, end, web, intégrateur, HTML, CSS, Javascript, PHP, bootstrap, tailwind">
     <meta name="author" content="Ewenn Ansquer">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="assets/styles/style.css">
 </head>
 <body>
     <nav>
@@ -44,9 +44,12 @@
                 </path>
             </svg>
         </section>
+        <section class="resume">
+            
+        </section>
     </main>
-    <script src="app.js"></script>
-    <script src="librairies/butter.js"></script>
+    <script src="assets/Javascript/app.js"></script>
+    <script src="assets/librairies/butter.js"></script>
     <script>
         butter.init({cancelOnTouch: true});  //activate smooth scroll
     </script>
