clear img folder and add icon to tab

--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Métier: Développeur Front-End</title>
-    <meta name="description" content="Toutes les clés pour appréhender le Métier : Développeur Front-End. C'est la personne en charge d’optimiser l’ergonomie et la navigation d’un site web HTML.">
+    <meta name="description" content="Toutes les clés pour appréhender le Métier : Développeur Front-End. C'est la personne en charge d’optimiser l’ergonomie et la navigation d’un site web HTML">
+    <link rel="icon" href="assets/img/codeIcon.png">
     <meta name=" robots " content="index, follow">
     <meta name="keywords" content="développeur, informatique, front-end, front, end, web, intégrateur, HTML, CSS, Javascript, PHP, bootstrap, tailwind">
     <meta name="author" content="Ewenn Ansquer">
