add corect color change to nav p

--- a/index.html
+++ b/index.html
@@ -69,7 +69,21 @@
         <article class="missions">
 
         </article>
+        <article class="skills">
+
+        </article>
+        <article class="quality">
+
+        </article>
+        <article class="wages">
+
+        </article>
+        <article class="diploma">
+
+        </article>
     </main>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
     <script src="assets/Javascript/app.js"></script>
     <script src="assets/librairies/butter.js"></script>
     <script>
