--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </ul>
     </nav>
     <a href="#top" class="backToTop">
-        <svg viewBox="0 0 100 100">
+        <svg>
             <path fill="#7e9CFF" d="m50 0c-13.262 0-25.98 5.2695-35.355 14.645s-14.645 22.094-14.645 35.355 5.2695 25.98 14.645 35.355 22.094 14.645 35.355 14.645 25.98-5.2695 35.355-14.645 14.645-22.094 14.645-35.355-5.2695-25.98-14.645-35.355-22.094-14.645-35.355-14.645zm20.832 62.5-20.832-22.457-20.625 22.457c-1.207 0.74219-2.7656 0.57812-3.7891-0.39844-1.0273-0.98047-1.2695-2.5273-0.58594-3.7695l22.918-25c0.60156-0.61328 1.4297-0.96094 2.2891-0.96094 0.86328 0 1.6914 0.34766 2.293 0.96094l22.918 25c0.88672 1.2891 0.6875 3.0352-0.47266 4.0898-1.1562 1.0508-2.9141 1.0859-4.1133 0.078125z">
             </path>
         </svg>
@@ -33,7 +33,7 @@
     <main id="butter">
         <section class="heroArea">
             <h1>Développeur Front-End</h1>
-            <svg viewBox="30 85 330 100">
+            <svg>
                 
                 <!-- <defs>
                     <linearGradient id="linear-gradient" x1="311.03" y1="208.3" x2="332.41" y2="188.56" gradientUnits="userSpaceOnUse"><stop offset="0" stop-color="#4462c6"></stop><stop offset="1" stop-color="#502019"></stop></linearGradient>
@@ -46,7 +46,7 @@
             </svg>
         </section>
         <article class="resume" id="firstArticle">
-            <h1 id="test">Résumer</h1>
+            <h1>Résumer</h1>
             <h2>Quel est ce qu'un front-end développeur ?</h2>
             <p>Le Développeur Front-End est en charge d’optimiser l’ergonomie et la navigation d’un site web. Contrairement au Développeur Back-End, le Développeur Front-End ne vit pas dans l’ombre. Son travail est visible à l’écran et le rendu est l’élément premier que l’utilisateur verra.</p>
 
@@ -67,10 +67,30 @@
             <p>Ce sont à tous ces détails que le Développeur Front-End doit faire attention.</p>
         </article>
         <article class="missions">
-
+            <h1>Missions</h1>
+            <ul>
+                <li>-Intégrer les designs/maquettes des sites webs</li>
+                <li>-Optimiser les performances du site par rapport aux différents navigateurs</li>
+                <li>-Optimiser l'affichage sur tous les types de supports</li>
+                <li>-Faire de la veille informatique (design, technologie, librairie, framework...)</li>
+            </ul>
         </article>
         <article class="skills">
-
+            <h1>Compétences</h1>
+            <ul>
+                <li>-Maitrises des languages</li>
+                <li>
+                    <img src="./assets/img/icons8-html-5-240.png" alt="html icon">
+                    <img src="./assets/img/icons8-css3-240.png" alt="css icon">
+                    <img src="./assets/img/icons8-javascript-240.png" alt="Javascrip icon">
+                </li>
+                <li>-Maitrises des frameworks</li>
+                <li></li>
+                <li>-Notions de design</li>
+                <li></li>
+                <li>-Bon niveau en langue</li>
+                <li></li>
+            </ul>
         </article>
         <article class="quality">
 
