finish skills article

--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
     <nav>
         <ul>
             <li><p class="navBarLink">résumer</p></li>
-            <li><p href="" class="navBarLink">missions</p></li>
-            <li><p href="" class="navBarLink">compétences</p></li>
-            <li><p href="" class="navBarLink">qualités</p></li>
-            <li><p href="" class="navBarLink">salaires</p></li>
-            <li><p href="" class="navBarLink">formations et diplomes</p></li>
+            <li><p class="navBarLink">missions</p></li>
+            <li><p class="navBarLink">compétences</p></li>
+            <li><p class="navBarLink">qualités</p></li>
+            <li><p class="navBarLink">salaires</p></li>
+            <li><p class="navBarLink">formations et diplomes</p></li>
         </ul>
     </nav>
     <a href="#top" class="backToTop">
@@ -32,7 +32,7 @@
     <div class="progressBar"></div>
     <main id="butter">
         <section class="heroArea">
-            <h1>Développeur Front-End</h1>
+            <h1 class="whiteOnBlueH1">Développeur Front-End</h1>
             <svg>
                 
                 <!-- <defs>
@@ -46,7 +46,7 @@
             </svg>
         </section>
         <article class="resume" id="firstArticle">
-            <h1>Résumer</h1>
+            <h1 class="blueOnWhiteH1">Résumer</h1>
             <h2>Quel est ce qu'un front-end développeur ?</h2>
             <p>Le Développeur Front-End est en charge d’optimiser l’ergonomie et la navigation d’un site web. Contrairement au Développeur Back-End, le Développeur Front-End ne vit pas dans l’ombre. Son travail est visible à l’écran et le rendu est l’élément premier que l’utilisateur verra.</p>
 
@@ -67,7 +67,7 @@
             <p>Ce sont à tous ces détails que le Développeur Front-End doit faire attention.</p>
         </article>
         <article class="missions">
-            <h1>Missions</h1>
+            <h1 class="whiteOnBlueH1">Missions</h1>
             <ul>
                 <li>-Intégrer les designs/maquettes des sites webs</li>
                 <li>-Optimiser les performances du site par rapport aux différents navigateurs</li>
@@ -76,20 +76,41 @@
             </ul>
         </article>
         <article class="skills">
-            <h1>Compétences</h1>
+            <h1 class="blueOnWhiteH1">Compétences</h1>
             <ul>
-                <li>-Maitrises des languages</li>
                 <li>
-                    <img src="./assets/img/icons8-html-5-240.png" alt="html icon">
-                    <img src="./assets/img/icons8-css3-240.png" alt="css icon">
-                    <img src="./assets/img/icons8-javascript-240.png" alt="Javascrip icon">
+                    <h2>-Maitrises des languages</h2>
+                    <div class="skillsIcones">
+                        <img src="./assets/img/html-icon.svg" alt="html icon" title="Html (HyperText Markup Language)">
+                        <img src="./assets/img/css-icon.svg" alt="css icon" title="CSS (Cascading Style Sheets)">
+                        <img src="./assets/img/javascript-icon.svg" alt="Javascrip icon" title="JavaScript">
+                    </div>
                 </li>
-                <li>-Maitrises des frameworks</li>
-                <li></li>
-                <li>-Notions de design</li>
-                <li></li>
-                <li>-Bon niveau en langue</li>
-                <li></li>
+                <li>
+                    <h2>-Maitrises des frameworks</h2>
+                    <div class="skillsIcones">
+                        <img src="./assets/img/react-js-icon.svg" alt="React icone" title="React">
+                        <img src="./assets/img/angular-icon.svg" alt="Angular icone" title="Angular">
+                        <img src="./assets/img/vue-js-icon.svg" alt="Vue.js icone" title="Vue.Js">
+                        <img src="./assets/img/jquery-icon.svg" alt="Jquery icone" title="Jquery">
+                    </div>
+                </li>
+                <li>
+                    <h2>-Notions de design</h2>
+                    <div class="skillsIcones">
+                        <img src="./assets/img/adobe-illustrator-icon.svg" alt="Adobe Illustrator icone" title="Adobe Illustrator">
+                        <img src="./assets/img/adobe-photoshop-icon.svg" alt="Adobe Illustrator" title="Adobe Photoshop">
+                        <img src="./assets/img/figma-icon.svg" alt="Figma icone" title="Figma">
+                        <img src="./assets/img/sketch-icon.svg" alt="Sketch icone" title="Sketch">
+                    </div>
+                </li>
+                <li>
+                    <h2>-Bon niveau en langue</h2>
+                    <div class="skillsIcones">
+                        <img src="./assets/img/france-flag-icon.svg" alt="France flag" title="Français">
+                        <img src="./assets/img/united-kingdom-flag-icon.svg" alt="United Kingdome flag" title="Anglais">
+                    </div>
+                </li>
             </ul>
         </article>
         <article class="quality">
