--- a/index.html
+++ b/index.html
@@ -12,7 +12,15 @@
     <meta name="author" content="Ewenn Ansquer">
     <link rel="stylesheet" href="assets/styles/style.css">
 </head>
-<body>
+<body class="noScroll">
+    <div class="loaderScreen">
+        <div>
+            <p>Chargement</p>
+            <p>.</p>
+            <p>.</p>
+            <p>.</p>
+        </div>
+    </div>
     <nav>
         <ul>
             <li><p class="navBarLink">résumer</p></li>
@@ -30,7 +38,7 @@
     <main id="butter">
         <section class="heroArea">
             <h1 class="whiteOnBlueH1">Développeur Front-End</h1>
-            <img src="./assets/img/heroSvg.svg">
+            <img src="./assets/img/heroSvg.svg" alt="person in front of a computer">
         </section>
         <article class="resume" id="firstArticle">
             <h1 class="blueOnWhiteH1">Résumer</h1>
