add hamburger button to finish nav bar

--- a/index.html
+++ b/index.html
@@ -22,6 +22,11 @@
         </div>
     </div>
     <nav>
+        <button>
+            <div></div>
+            <div></div>
+            <div></div>
+        </button>
         <ul>
             <li><p class="navBarLink">résumer</p></li>
             <li><p class="navBarLink">missions</p></li>
