add quality article

--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
             <div></div>
         </button>
         <ul>
-            <li><p class="navBarLink">résumer</p></li>
-            <li><p class="navBarLink">missions</p></li>
-            <li><p class="navBarLink">compétences</p></li>
-            <li><p class="navBarLink">qualités</p></li>
-            <li><p class="navBarLink">salaires</p></li>
-            <li><p class="navBarLink">formations et diplomes</p></li>
+            <li><p class="navBarLink">Résumer</p></li>
+            <li><p class="navBarLink">Missions</p></li>
+            <li><p class="navBarLink">Qualités</p></li>
+            <li><p class="navBarLink">Connaissances</p></li>
+            <li><p class="navBarLink">Salaires</p></li>
+            <li><p class="navBarLink">Formations et Diplomes</p></li>
         </ul>
     </nav>
     <a href="#top" class="backToTop">
@@ -75,8 +75,36 @@
                 <li>-Faire de la veille informatique (design, technologie, librairie, framework...)</li>
             </ul>
         </article>
+        <article class="quality">
+            <h1 class="blueOnWhiteH1">Qualités</h1>
+            <div class="listQualities">
+                <div>
+                    <h2>Rigeur</h2>
+                    <p>Avoir de la rigueur professionnelle, c'est aussi tenir à ses engagements et justifier l'état d'une situation.</p>
+                </div>
+                <div>
+                    <h2>Créativité</h2>
+                    <p>La capacité de générer facilement des idées, alternatives et solutions à un problème donné</p>
+                </div>
+                <div>
+                    <h2>Esprit d'équipe</h2>
+                    <p>l'esprit d'équipe consiste à faire preuve d'altruisme et de solidarité avec les membres de son groupe.</p>
+                </div>
+                <div>
+                    <h2>Autonomie</h2>
+                    <p>la capacité qu'à une personne à prendre des décisions dans le cadre de son travail, et des décisions qui s'intègrent parfaitement au paysage professionnel dans lequel elle évolue.</p>
+                </div>
+                <div>
+                    <h2> Curiosité</h2>
+                    <p>Le curieux recherchera constamment des informations. Pour une entreprise cela signifie qu'il se renseignera régulièrement sur les nouvelles techniques associées à son métier. Qu'il sera ouvert à la nouveauté et enthousiaste face à de nouveaux projets. Le curieux en entreprise est constamment en apprentissage !</p>
+                </div>
+                <div>
+                    <h2>Sociabilité</h2>
+                    <p>Capable de relations humaines faciles, être quelqu'un qui recherche de la compagnie.</p>
+                </div>
+        </article>
         <article class="skills">
-            <h1 class="blueOnWhiteH1">Compétences</h1>
+            <h1 class="whiteOnBlueH1">Compétences</h1>
             <ul>
                 <li>
                     <h2>-Maitrises des languages</h2>
@@ -113,9 +141,6 @@
                 </li>
             </ul>
         </article>
-        <article class="quality">
-
-        </article>
         <article class="wages">
 
         </article>
@@ -125,8 +150,8 @@
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
-    <script src="assets/Javascript/app.js"></script>
-    <script src="assets/librairies/butter.js"></script>
+    <script src="Javascript/app.js"></script>
+    <script src="Jqvqscript/butter.js"></script>
     <script>
         butter.init({cancelOnTouch: true});  //activate smooth scroll
     </script>
