add salary, diploma section and start footer

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div></div>
         </button>
         <ul>
-            <li><p class="navBarLink">Résumer</p></li>
+            <li><p class="navBarLink">Résumé</p></li>
             <li><p class="navBarLink">Missions</p></li>
             <li><p class="navBarLink">Qualités</p></li>
             <li><p class="navBarLink">Connaissances</p></li>
@@ -46,8 +46,8 @@
             <img src="./assets/img/heroSvg.svg" alt="person in front of a computer">
         </section>
         <article class="resume" id="firstArticle">
-            <h1 class="blueOnWhiteH1">Résumer</h1>
-            <h2>Quel est ce qu'un front-end développeur ?</h2>
+            <h1 class="blueOnWhiteH1">Résumé</h1>
+            <h2>Qu'est ce qu'un front-end développeur ?</h2>
             <p>Le Développeur Front-End est en charge d’optimiser l’ergonomie et la navigation d’un site web. Contrairement au Développeur Back-End, le Développeur Front-End ne vit pas dans l’ombre. Son travail est visible à l’écran et le rendu est l’élément premier que l’utilisateur verra.</p>
 
             <p>Afin de rendre l’interface des utilisateurs agréable, le Développeur Front-End se tient régulièrement informé des évolutions web. Son objectif est de proposer un site internet ergonomique et accessible. Pour cela, une connaissance approfondie des normes du W3C lui est nécessaire. Elle lui permet de soumettre un contenu optimal tout en respectant les exigences des navigateurs web.</p>
@@ -142,11 +142,45 @@
             </ul>
         </article>
         <article class="wages">
-
+            <h1 class="blueOnWhiteH1">Salaires</h1>
+            <p>En début de carrière, le Développeur Front-End touche généralement autour de 30K €/an. Puis, selon les compétences qu’il a acquis et son expérience, le Développeur Front-End peut facilement évoluer vers 40K €/an. Enfin, arrivée en fin de carrière il peut se voir rémunéré jusqu’à 70K €/an.<br><br>Néanmoins pour la plupart d’entre eux, il est reste encore difficile d’atteindre un salaire aussi élevé.
+            </p>
+            <div class="friseSalaires">
+                <div class="salaireDebutant barFrise">
+                    <p>Salaire Débutant<br>30K - 35K€/an</p>
+                </div>
+                <div class="salaireIntermediare barFrise">
+                    <p>Salaire Intermédiaire<br>40K - 45K€/an</p>
+                </div>
+                <div class="salaireSenior barFrise">
+                    <p>Salaire Sénior<br>55K - 70K€/an</p>
+                </div>
+                <div class="arrow"></div>
+            </div>
         </article>
         <article class="diploma">
-
+            <h1 class="whiteOnBlueH1">Formation et Diplomes</h1>
+            <ul>
+                <li>2ans pour un BTS services informations aux organisions(BTS SIO)</li>
+                <li>3ans pour un BUT informatique, statistique et informatique décisionnelles parcours sciences et données</li>
+                <li>5ans pour un Master, un Diplome d'ingénieur ou d'école spécialisée en informatique</li>
+            </ul>
         </article>
+        <footer>
+            <div class="content">
+                <div class="sources">
+                    <h2 class="whiteOnBlueH1">Sources</h2>
+                    <ul>
+                        <li><a target="_blank" href="https://www.onisep.fr/Ressources/Univers-Metier/Metiers/developpeur-developpeuse-informatique">informations: ONISEP</a></li>
+                        <li><a target="_blank" href="https://www.clementine.jobs/fiches-metiers/metiers-techniques-du-web/developpeur-front-end/">informations: Clementine</a></li>
+                        <li><a target="_blank" href="https://uxwing.com/">icones: UxWing</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="droits">
+                <p>© 2022 Métier:Développeur Front-End Tous droits réservés.</p>
+            </div>
+        </footer>
     </main>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
