--- a/index.html
+++ b/index.html
@@ -168,12 +168,20 @@
         </article>
         <footer>
             <div class="content">
-                <div class="sources">
+                <img src="./assets/img/heroSvg.svg" alt="person in front of a computer">
+                <div class="footerList">
                     <h2 class="whiteOnBlueH1">Sources</h2>
                     <ul>
-                        <li><a target="_blank" href="https://www.onisep.fr/Ressources/Univers-Metier/Metiers/developpeur-developpeuse-informatique">informations: ONISEP</a></li>
-                        <li><a target="_blank" href="https://www.clementine.jobs/fiches-metiers/metiers-techniques-du-web/developpeur-front-end/">informations: Clementine</a></li>
-                        <li><a target="_blank" href="https://uxwing.com/">icones: UxWing</a></li>
+                        <li><a target="_blank" href="https://www.onisep.fr/Ressources/Univers-Metier/Metiers/developpeur-developpeuse-informatique">ONISEP Développeur/euse informatique</a></li>
+                        <li><a target="_blank" href="https://www.clementine.jobs/fiches-metiers/metiers-techniques-du-web/developpeur-front-end/">Clementine Fiche Métier Développeur Web</a></li>
+                        <li><a target="_blank" href="https://uxwing.com/">UxWing</a></li>
+                    </ul>
+                </div>
+                <div class="footerList">
+                    <h2 class="whiteOnBlueH1">Autres</h2>
+                    <ul>
+                        <li><a href="">Mentions Légales</a></li>
+                        <li><a href="">Charte de Confidentialité</a></li>
                     </ul>
                 </div>
             </div>
