change the scrollTop a for a button

--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
             <li><p class="navBarLink">Formations et Diplomes</p></li>
         </ul>
     </nav>
-    <a href="#top" class="backToTop">
+    <button class="backToTop">
         <img src="./assets/img/backToTop.svg">
-    </a>
+    </button>
     <div class="progressBar"></div>
     <main id="butter">
         <section class="heroArea">
