--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.10.4/ScrollTrigger.min.js"></script>
     <script src="Javascript/app.js"></script>
-    <script src="Jqvqscript/butter.js"></script>
+    <script src="Javascript/butter.js"></script>
     <script>
         butter.init({cancelOnTouch: true});  //activate smooth scroll
     </script>
